// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionSender should not render delegate icon 1`] = `
<div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 cHOkoL no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
      >
        Sender
      </div>
      <div
        class="font-semibold"
      >
        <div
          class="flex-grow flex items-center no-ligatures overflow-hidden whitespace-nowrap"
        >
          <span
            class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
            data-testid="Address__address"
          >
            test-address
          </span>
        </div>
      </div>
    </div>
    <div
      class="flex items-center -space-x-2"
    >
      <div
        class="Circle__CircleWrapper-uw7h4j-0 bNDQMV border-theme-text text-theme-text dark:border-theme-secondary-600 dark:text-theme-secondary-600 ring-theme-background"
      >
        <div
          class="sc-bdfBwQ catSEV"
          height="25"
          width="25"
        >
          <svg>
            delegate.svg
          </svg>
        </div>
      </div>
      <div
        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB flex-shrink-0"
        data-testid="Avatar"
      >
        <div
          class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
        >
          <img
            alt="test-address"
            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(3, 169, 244)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"35\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(255, 87, 34)\\"/></svg>"
            title="test-address"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionSender should not render with alias 1`] = `
<div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 cHOkoL no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
      >
        Sender
      </div>
      <div
        class="font-semibold"
      >
        <div
          class="flex-grow flex items-center no-ligatures overflow-hidden whitespace-nowrap"
        >
          <span
            class="max-w-24 truncate mr-2 font-semibold text-base text-theme-text"
            data-testid="Address__alias"
          >
            <span
              class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
              data-testid="TruncateEnd"
            >
              test-alias
            </span>
          </span>
          <span
            class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
            data-testid="Address__address"
          >
            test-address
          </span>
        </div>
      </div>
    </div>
    <div
      class="flex items-center -space-x-2"
    >
      <div
        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB flex-shrink-0"
        data-testid="Avatar"
      >
        <div
          class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
        >
          <img
            alt="test-address"
            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(3, 169, 244)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"35\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(255, 87, 34)\\"/></svg>"
            title="test-address"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionSender should render 1`] = `
<div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 cHOkoL no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
      >
        Sender
      </div>
      <div
        class="font-semibold"
      >
        <div
          class="flex-grow flex items-center no-ligatures overflow-hidden whitespace-nowrap"
        >
          <span
            class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
            data-testid="Address__address"
          >
            test-address
          </span>
        </div>
      </div>
    </div>
    <div
      class="flex items-center -space-x-2"
    >
      <div
        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jrNmMB flex-shrink-0"
        data-testid="Avatar"
      >
        <div
          class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
        >
          <img
            alt="test-address"
            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(3, 169, 244)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"35\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(255, 87, 34)\\"/></svg>"
            title="test-address"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
